// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions-panel Renders \`actions-panel\` with actions correctly. Size 'xl' 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout row align-center"
  >
    <c-action-btn-stub
      color="primary"
      icon="edit"
      lazy="lazy"
      tooltip="Edit title"
    />
    <c-action-btn-stub
      color="secondary"
      icon="delete"
      lazy="lazy"
      tooltip="Delete title"
    />
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with actions correctly. Size 'xl' 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout row align-center"
  >
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with three actions and 3 inlineCount correctly. Size 'l' 1`] = `
<div class="actions-panel">
  <div class="layout row align-center"><span><button type="button" class="ma-0 v-btn v-btn--icon theme--light"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light">more_vert</i></div></button><div class="v-menu"><transition-stub name="v-menu-transition"><div class="v-menu__content theme--light " style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"></div></transition-stub></div></span></div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions and 3 inlineCount correctly. Size 'l' 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions and 3 inlineCount correctly. Size 'm' 1`] = `
<div class="actions-panel">
  <div class="layout row align-center"><span><button type="button" class="ma-0 v-btn v-btn--icon theme--light"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light">more_vert</i></div></button><div class="v-menu"><transition-stub name="v-menu-transition"><div class="v-menu__content theme--light " style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"></div></transition-stub></div></span></div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions and 3 inlineCount correctly. Size 'm' 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions and 3 inlineCount correctly. Size 't' 1`] = `
<div class="actions-panel">
  <div class="layout row align-center"><span><button type="button" class="ma-0 v-btn v-btn--icon theme--light"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light">more_vert</i></div></button><div class="v-menu"><transition-stub name="v-menu-transition"><div class="v-menu__content theme--light " style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"></div></transition-stub></div></span></div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions and 3 inlineCount correctly. Size 't' 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions and 3 inlineCount correctly. Size 'xl' 1`] = `
<div class="actions-panel">
  <div class="layout row align-center">
    <c-action-btn-stub tooltip="Edit title" icon="edit" color="primary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Delete title" icon="delete" color="secondary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Ack title" icon="done" color="secondary" lazy="lazy"></c-action-btn-stub>
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions and 3 inlineCount correctly. Size 'xl' 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 2 inlineCount and wrap 1`] = `
<div class="actions-panel">
  <div class="layout wrap row align-center">
    <c-action-btn-stub tooltip="Edit title" icon="edit" color="primary" lazy="lazy"></c-action-btn-stub><span><button type="button" class="ma-0 v-btn v-btn--icon theme--light"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light">more_vert</i></div></button><div class="v-menu"><transition-stub name="v-menu-transition"><div class="v-menu__content theme--light " style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"></div></transition-stub></div></span>
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 2 inlineCount and wrap 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap 1`] = `
<div class="actions-panel">
  <div class="layout wrap row align-center">
    <c-action-btn-stub tooltip="Edit title" icon="edit" color="primary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Delete title" icon="delete" color="secondary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Ack title" icon="done" color="secondary" lazy="lazy"></c-action-btn-stub>
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap correctly. Size l 1`] = `
<div class="actions-panel">
  <div class="layout wrap row align-center">
    <c-action-btn-stub tooltip="Edit title" icon="edit" color="primary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Delete title" icon="delete" color="secondary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Ack title" icon="done" color="secondary" lazy="lazy"></c-action-btn-stub>
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap correctly. Size l 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap correctly. Size m 1`] = `
<div class="actions-panel">
  <div class="layout wrap row align-center">
    <c-action-btn-stub tooltip="Edit title" icon="edit" color="primary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Delete title" icon="delete" color="secondary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Ack title" icon="done" color="secondary" lazy="lazy"></c-action-btn-stub>
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap correctly. Size m 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap correctly. Size t 1`] = `
<div class="actions-panel">
  <div class="layout wrap row align-center">
    <c-action-btn-stub tooltip="Edit title" icon="edit" color="primary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Delete title" icon="delete" color="secondary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Ack title" icon="done" color="secondary" lazy="lazy"></c-action-btn-stub>
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap correctly. Size t 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap correctly. Size xl 1`] = `
<div class="actions-panel">
  <div class="layout wrap row align-center">
    <c-action-btn-stub tooltip="Edit title" icon="edit" color="primary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Delete title" icon="delete" color="secondary" lazy="lazy"></c-action-btn-stub>
    <c-action-btn-stub tooltip="Ack title" icon="done" color="secondary" lazy="lazy"></c-action-btn-stub>
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with three actions, 3 inlineCount and wrap correctly. Size xl 2`] = `undefined`;
